# vtabloid

./: CMakeLists.txt
src/: main.cpp
src/analysis/: cfg.cpp  cfg.hpp  dataflow.cpp  dataflow.hpp  lattice.hpp  rtti.hpp  structure.cpp  structure.hpp  vtable_scanner.cpp  vtable_scanner.hpp
src/common/: binary_view.hpp  loader.hpp  types.hpp
src/elf/: elf_loader.cpp  elf_loader.hpp  elf_structures.hpp
src/macho/: macho_loader.cpp  macho_loader.hpp  macho_structures.hpp
src/pe/: pe_loader.cpp  pe_loader.hpp  pe_structures.hpp
